Fix progress bar text visibility - C++ text now appears above percentage

--- a/assets/css/progress.css
+++ b/assets/css/progress.css
@@ -65,6 +65,7 @@
 	-moz-border-radius:3px;
 	-webkit-border-radius:3px;
 	position: relative;
+	z-index: 1;
 }
 
 .skill-bar-percent {
@@ -77,4 +78,5 @@
 	color:#ffffff;
 	font-weight: bold;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+	z-index: 5;
 }
